--- a/src/App.css
+++ b/src/App.css
@@ -155,3 +155,8 @@ strong, b {
 .dark-btn.bounce-on-hover:hover {
     animation: bounce 0.6s ease-out;
 }
+
+
+html, body {
+  font-family: "Times New Roman", Times, serif;
+}
